--- a/boilerplate/Tests/Setup.js.ejs
+++ b/boilerplate/Tests/Setup.js.ejs
@@ -1,24 +1,8 @@
 // Mock your external modules here if needed
-<%_ if (props.i18n === 'react-native-i18n') { _%>
+<%_ if (props.authType === 'session') { _%>
 jest
-.mock('react-native-i18n', () => {
-  const english = require('../App/I18n/languages/english.json')
-  const keys = require('ramda')
-  const replace = require('ramda')
-  const forEach = require('ramda')
-
-  return {
-    t: (key, replacements) => {
-      let value = english[key]
-      if (!value) return key
-      if (!replacements) return value
-
-      forEach((r) => {
-        value = replace(`{{${r}}}`, replacements[r], value)
-      }, keys(replacements))
-      return value
-    }
-  }
+.mock('react-native-cookies', () => {
+  return { get: jest.fn((url) => { return [] }) }
 })
 <%_ } else { _%>
 // jest
