--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -68,6 +68,10 @@
     "setupFiles": [
       "./Tests/Setup"
     ],
+    "coveragePathIgnorePatterns": [
+      "/storybook/",
+      "/*\\.story\\.js"
+    ],
     "preset": "react-native"
   },
   "config": { }
