--- a/boilerplate/App/Sagas/LoginSagas.js.ejs
+++ b/boilerplate/App/Sagas/LoginSagas.js.ejs
@@ -55,7 +55,7 @@ export function * logout (api) {
 <%_ if (props.authType === 'oauth2' || props.authType === 'uaa') { _%>
 export function * loginRefresh (api) {
   const authToken = yield select(selectAuthToken)
-  if (authToken !== null) {
+  if (authToken) {
     const authObj = 'refresh_token=' + authToken.refresh_token + '&grant_type=refresh_token'
     const response = yield call(api.login, authObj)
 
@@ -76,7 +76,7 @@ export function * loginRefresh (api) {
 export function * loginLoad (api) {
   const authToken = yield select(selectAuthToken)
   // only set the token if we have it
-  if (authToken !== null) {
+  if (authToken) {
     <%_ if (props.authType === 'jwt') { _%>
     yield call(api.setAuthToken, authToken)
     <%_ } else if (props.authType === 'oauth2' || props.authType === 'uaa') { _%>
