--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -69,6 +69,7 @@
       "./Tests/Setup"
     ],
     "coveragePathIgnorePatterns": [
+      "App/Services/Api.js",
       "/storybook/",
       "/*\\.story\\.js"
     ],
