--- a/boilerplate/Tests/Sagas/LoginSagaTest.js.ejs
+++ b/boilerplate/Tests/Sagas/LoginSagaTest.js.ejs
@@ -1,21 +1,51 @@
 import FixtureAPI from '../../App/Services/FixtureApi'
-import { call, put, select } from 'redux-saga/effects'
-import { login, logout, loginLoad, selectAuthToken } from '../../App/Sagas/LoginSagas'
+import { call, put<% if (props.authType !== 'session') { %>, select<% } %> } from 'redux-saga/effects'
+import { login, logout<% if (props.authType !== 'session') { %>, loginLoad, selectAuthToken<% } %> } from '../../App/Sagas/LoginSagas'
 import LoginActions from '../../App/Redux/LoginRedux'
 import AccountActions from '../../App/Redux/AccountRedux'
 
 const stepper = (fn) => (mock) => fn.next(mock).value
 
 test('login success path', () => {
-  const authObj = {username: 'user', password: 'user', rememberMe: true}
+  <%_ if (props.authType === 'oauth2') { _%>
+  const authObj = 'username=user&password=user&grant_type=password&scope=read%20write'
+  <%_} else if (props.authType === 'session') { _%>
+  const authObj = 'j_username=user&j_password=user&remember-me=true'
+  <%_} else if (props.authType === 'uaa') { _%>
+  const authObj = 'username=user&password=user&grant_type=password'
+  <%_ } else if (props.authType === 'jwt') { _%>
+  const authObj = {
+    username: 'user',
+    password: 'user',
+    rememberMe: true
+  }
+  <%_ } _%>
   const response = FixtureAPI.login(authObj)
+  <%_ if (props.authType === 'jwt') { _%>
   const step = stepper(login(FixtureAPI, authObj))
+  <%_ } else { _%>
+  const step = stepper(login(FixtureAPI, {username: 'user', password: 'user'}))
+  <%_ } _%>
 
+  <%_ if (props.authType === 'jwt') { _%>
+  expect(step(response)).toEqual(call(FixtureAPI.login, {username: 'user', password: 'user', rememberMe: true}))
+  <%_} else if (props.authType === 'oauth2' || props.authType === 'uaa' || props.authType === 'session') { _%>
   expect(step(response)).toEqual(call(FixtureAPI.login, authObj))
+  <%_ } _%>
+  <%_ if (props.authType === 'jwt') { _%>
   // Set the auth token on the API
   expect(step(response)).toEqual(call(FixtureAPI.setAuthToken, response.data.id_token))
   // Store the auth token in redux
-  expect(step()).toEqual(put(LoginActions.loginSuccess(response.data.id_token)))
+  expect(step(response)).toEqual(put(LoginActions.loginSuccess(response.data.id_token)))
+  <%_} else if (props.authType === 'session') { _%>
+  // Call success with the response
+  expect(step(response)).toEqual(put(LoginActions.loginSuccess(response.data)))
+  <%_} else if (props.authType === 'oauth2' || props.authType === 'uaa') { _%>
+  // Set the auth token on the API
+  expect(step(response)).toEqual(call(FixtureAPI.setAuthToken, response.data.access_token))
+  // Store the auth token in redux
+  expect(step(response)).toEqual(put(LoginActions.loginSuccess(response.data)))
+  <%_ } _%>
   // Request the account details
   expect(step(response)).toEqual(put(AccountActions.accountRequest()))
   // Close the relogin popup if needed
@@ -23,9 +53,21 @@ test('login success path', () => {
 })
 
 test('login failure path', () => {
-  const authObj = {username: 'user', password: 'not-the-password', rememberMe: true}
+  <%_ if (props.authType === 'oauth2') { _%>
+  const authObj = 'username=user&password=user2&grant_type=password&scope=read%20write'
+  <%_} else if (props.authType === 'session') { _%>
+  const authObj = 'j_username=user&j_password=user2&remember-me=true'
+  <%_} else if (props.authType === 'uaa') { _%>
+  const authObj = 'username=user&password=user2&grant_type=password'
+  <%_ } else if (props.authType === 'jwt') { _%>
+  const authObj = {
+    username: 'user',
+    password: 'user2',
+    rememberMe: true
+  }
+  <%_ } _%>
   const response = FixtureAPI.login(authObj)
-  const step = stepper(login(FixtureAPI, authObj))
+  const step = stepper(login(FixtureAPI, {username: 'user', password: 'user2'}))
 
   // Attempt to login and fail
   expect(step(response)).toEqual(call(FixtureAPI.login, authObj))
@@ -42,10 +84,12 @@ test('login load path with no token', () => {
 })
 
 test('login load path with a token', () => {
+  const accessToken = { access_token: 'hi' }
   const step = stepper(loginLoad(FixtureAPI))
   // Select the token from redux and set it
-  expect(step({authToken: 'hi'})).toEqual(select(selectAuthToken))
-  expect(step({authToken: 'hi'})).toEqual(call(FixtureAPI.setAuthToken, {authToken: 'hi'}))
+  expect(step(accessToken)).toEqual(select(selectAuthToken))
+  expect(step(accessToken)).toEqual(call(FixtureAPI.setAuthToken, accessToken<% if (props.authType === 'oauth2' || props.authType === 'uaa') { %>.access_token<% } %>))
+  FixtureAPI.setAuthToken({authToken: 'hi'})
   // The token has been set so call success
   expect(step()).toEqual(put(LoginActions.loginLoadSuccess()))
 })
@@ -53,8 +97,14 @@ test('login load path with a token', () => {
 test('logout success path', () => {
   // const response = FixtureAPI.logout()
   const step = stepper(logout(FixtureAPI))
+  // expect(step(response)).toEqual(call(FixtureAPI.login, authObj))
+  <%_ if (props.authType === 'session') { _%>
   // Remove the API token
+  expect(step()).toEqual(call(FixtureAPI.logout))
+  <%_ } else { _%>
   expect(step()).toEqual(call(FixtureAPI.removeAuthToken))
+  FixtureAPI.removeAuthToken()
+  <%_ } _%>
   // Reset the account and logout
   expect(step()).toEqual(put(AccountActions.accountRequest()))
   expect(step()).toEqual(put(LoginActions.logoutSuccess()))
