ignore Themes folder from test coverage

--- a/boilerplate/package.json.ejs
+++ b/boilerplate/package.json.ejs
@@ -70,6 +70,7 @@
     ],
     "coveragePathIgnorePatterns": [
       "App/Services/Api.js",
+      "App/Themes/",
       "/storybook/",
       "/*\\.story\\.js"
     ],
