--- a/boilerplate/App/Services/FixtureApi.js.ejs
+++ b/boilerplate/App/Services/FixtureApi.js.ejs
@@ -34,6 +34,13 @@ export default {
         ok: true,
         data: require('../Fixtures/login.json')
       }
+    <%_ if (props.authType === 'uaa' || props.authType === 'oauth2') { _%>
+    } else if (authObj === 'refresh_token=valid-refresh-token&grant_type=refresh_token') {
+      return {
+        ok: true,
+        data: require('../Fixtures/login.json')
+      }
+    <%_ } _%>
     } else {
       return {
         ok: false,
